# ota-py

./: .gitignore  Procfile  README.md  app.py  fly.toml  pyproject.toml  stations.json
.github/workflows/: fly.yml
static/: dayjs.relativeTime.min.mjs  dayjs.utc.min.mjs  manifest.json  script.mjs  style.css
templates/: arrivals.html  stations.html  train.html
