[tool.poetry]
name = "ota-py"
version = "0.1.0"
description = ""
authors = ["pbt <pb.to@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
nyct-gtfs = "^1.3.2"
cachetools = "^5.3.2"
arrow = "^1.3.0"
tzlocal = "^5.2"
hypercorn = "^0.16.0"
asgiref = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
